k8s/overlays/dev/observability/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: loja
  annotations:
    # Redireciona HTTP para HTTPS no ingress de dev.
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - grafana.dev.lojacloud.com.br
      secretName: loja-dev-tls
  rules:
    - host: grafana.dev.lojacloud.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
